Bug 524251: Move the bug visibility controls to the right of the timetracking and attachments tables Patch by Max Kanat-Alexander <mkanat@bugzilla.org> r=LpSolit, a=LpSolit

--- a/skins/standard/show_bug.css
+++ b/skins/standard/show_bug.css
@@ -59,6 +59,26 @@ table#flags {
     
 }
 
+#bz_big_form_parts td {
+    vertical-align: top;
+}
+
+.bz_group_visibility_section {
+    margin-left: 1em;
+}
+
+.bz_group_visibility_section .instructions {
+    font-style: italic;
+}
+
+#bz_restrict_group_visibility_help .instructions {
+    margin-top: 0;
+}
+
+#bz_enable_role_visibility_help {
+    margin-top: 1em;
+}
+
 .bz_time_tracking_table {
     border-collapse: collapse;
 }
